Avoid unwanted topbar and other things

--- a/src/components/LayoutComponents/Menu/MenuLeft/style.module.scss
+++ b/src/components/LayoutComponents/Menu/MenuLeft/style.module.scss
@@ -68,8 +68,9 @@
 
 .logo {
   height: 64px;
-  background: $menuBg-darken;
+  background: whitesmoke;
   overflow: hidden;
+  text-align: center
 }
 
 .logoContainer {
