--- a/src/components/CleanUIComponents/PaymentCard copy/style.module.scss
+++ b/src/components/CleanUIComponents/PaymentCard copy/style.module.scss
@@ -17,19 +17,17 @@
 .name {
   display: block;
   text-align: center;
-  font-size: rem(32);
+  font-size: rem(21);
   color: $black;
   font-weight: bold;
 }
 
 .number {
   display: block;
-  padding-top: 10%;
   text-align: center;
   font-size: rem(16);
+  color: $text;
   margin-bottom: rem(20);
-  font-weight: bold;
-  color: green;
 }
 
 .type {
@@ -38,7 +36,7 @@
   font-size: rem(16);
   margin-bottom: rem(20);
   font-weight: bold;
-  color: red;
+  color: $text;
 }
 
 .sum {
@@ -60,10 +58,11 @@
 }
 
 .footer {
-  display: block;
   text-align: center;
-  font-size: rem(16);
-  margin-bottom: rem(20);
-  font-weight: bold;
-  color: orange;
+  border-top: 1px solid $gray-border;
+  color: $text;
+  padding-top: rem(10);
+  margin-bottom: rem(-15);
+  font-style: italic;
+  font-size: rem(13);
 }
