--- a/src/components/LayoutComponents/Footer/style.module.scss
+++ b/src/components/LayoutComponents/Footer/style.module.scss
@@ -10,7 +10,7 @@
   margin: rem(0) rem(30) 0;
   border-radius: 5px 5px 0 0;
   color: $text-darken-more;
-  background: $gray-border;
+  // background: $gray-border;
   @media (max-width: $sm-max-width) {
     margin: 0 rem(10) !important;
   }
