--- a/src/pages/dashboard/FunctionView/components/style.module.scss
+++ b/src/pages/dashboard/FunctionView/components/style.module.scss
@@ -77,9 +77,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: rem(20);
+  padding: rem(10) 0;
   font-size: rem(16);
   font-weight: bold;
+  border-bottom: 1px dashed #d9d9d9;
 
   &:last-child {
     margin-bottom: 0;
