--- a/src/pages/dashboard/FunctionView/components/style.module.scss
+++ b/src/pages/dashboard/FunctionView/components/style.module.scss
@@ -79,7 +79,6 @@
   align-items: center;
   padding: rem(10) 0;
   font-size: rem(16);
-  font-weight: bold;
   border-bottom: 1px dashed #d9d9d9;
 
   &:last-child {
@@ -89,6 +88,10 @@
 
 .type {
   font-weight: bold;
+}
+
+.value {
+  font-weight: bolder;
 }
 
 .positiveValue {
