--- a/src/pages/dashboard/ProjectView/style.module.scss
+++ b/src/pages/dashboard/ProjectView/style.module.scss
@@ -1,30 +1,34 @@
 @import 'assets/styles/mixins.scss';
 
-.chartPieExample {
-  :global(.ct-chart) {
-    height: rem(200);
-  }
-
-  :global(.ct-series-a) path {
-    stroke: $success;
-  }
-
-  :global(.ct-series-b) path {
-    stroke: $warning;
-  }
-
-  :global(.ct-series-c) path {
-    stroke: $danger;
-  }
-
-  :global(.ct-series) path {
-    transition: stroke-opacity 0.2s ease-in-out;
-    &:hover {
-      stroke-opacity: 0.8;
-    }
-  }
+.noPadding {
+  padding: 0 !important;
 }
 
-.noPadding {
-  padding: 0px !important;
+.flexContainer {
+  padding: 0 15px;
+  display: flex;
+  width: 100%;
+  flex: 1;
+}
+
+.flexMainItem {
+  flex: 1;
+  height: 100%;
+}
+
+.flexItem {
+  display: flex;
+  height: 100%;
+}
+
+.budgetContainer {
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+
+.budgetSections {
+  display: flex;
+  flex: 1;
+  height: 100%;
 }
