--- a/src/pages/dashboard/FunctionView/components/style.module.scss
+++ b/src/pages/dashboard/FunctionView/components/style.module.scss
@@ -33,8 +33,8 @@
 .title {
   display: block;
   text-align: center;
-  font-size: rem(32);
-  color: $black;
+  font-size: rem(24);
+  color: $black-lighten;
   font-weight: bold;
 }
 
