changed legends for project details budget

--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -21,6 +21,7 @@ $blue: #08f;
 $blue-darken: #0072d6;
 $orange: #f2a654;
 $yellow: yellow;
+$green: #87d068;
 
 $menuBg: #001529;
 $menuBg-darken: #000c17;
